--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@ background-color:black;
   <body>
 
 <div class="rit">
+  <img src="Screenshot_20241228-223957~2.png" width="350" height="300"></img>
 </div>
 
     <div class="mid">
+      <h3>See Big Al 24's rapper profile page</h3>
     </div>
     
   </body>
