--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@ background-color:black;
 </div>
 
     <div class="mid">
-      <h3>See Big Al 24's rapper profile page</h3>
+      <h3>See Big Al 24's rapper profile page<p></p><script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QbEv9P99LsNz7AZ2Rmv675M"
+  publishable-key="pk_live_51QbDetP99LsNz7AZvAx4f0PmVpxdgawJyFiFxD2WlWBH68zwDb2QhoCJiDNtZtcx4ybn9vEXaQWF0rJdIuvnvn5u005cmuFnoJ"
+>
+</stripe-buy-button></h3>
     </div>
     
   </body>
