--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@ background-color:black;
 >
 </stripe-buy-button></h3>
     </div>
+
+<div class="br">
+  <br>
+</div>
+<h3>FIVE TOP LINKS INCLUDING GAMES AND STATS ON THE RAPPER PROFILE PAGE</h3>
+    <div class="br">
+      <br>
+    </div>
     
   </body>
 </html>
